# synrxnval

./: .gitignore  LICENSE  README.md  pyproject.toml
src/synrxnval/: __init__.py  cli.py  core.py
